cspm/cspm-platform/services/inventory-collector/output/588989875114/ap-northeast-3/ec2_66/describe_security_groups/describe_security_groups_output_20250603_144513.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-668a430b",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-5d88fd34",
      "SecurityGroupArn": "arn:aws:ec2:ap-northeast-3:588989875114:security-group/sg-668a430b",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-668a430b"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "ResponseMetadata": {
    "RequestId": "8e65d69c-ab27-4f2d-bd90-1553446b1d62",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "8e65d69c-ab27-4f2d-bd90-1553446b1d62",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "929",
      "date": "Tue, 03 Jun 2025 14:45:26 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
